# quickcalc

./: LICENSE  PKG-INFO  README.md  SOURCES.txt  setup.cfg
