[metadata]
name = quickcalc
version = 0.0.1
author = Arun Kumar IIIT-A
author_email = mit2020116@iiita.ac.in
description = A small calculator package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ARUN62/quickcalc
project_urls =
    Bug Tracker = https://github.com/ARUN62/quickcalc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src